2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* logrtns.c (log_read_dates): Don't barf on multi-lines log
	messages than don't include dates. Bug reported by John Rice

	* log_repaint.c: (logview_unbold_rows),
	(logview_add_new_log_lines), (logview_scroll_and_focus_path),
	(log_fill_model_date, logview_scroll_and_focus_path): Finally handle correctly
        the adding of new lines to a log, be it selected or not. Don't select
	the new lines, just scroll to them.

	* logrtns.c: (log_open):
	* logrtns.h: cleanups and fixes for potential sync problems.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c (logview_show_busy_cursor): New. Only show the busy
	  cursor after a short delay.
	  (logview_create_model): Try not to make the cursor flicker.

	* logview.c (logview_destroy): Don't call gtk_main_quit if we're not
	  in the gtk main loop yet.

	* log_repaint.c: (logview_unbold_rows),
	(logview_scroll_and_focus_path), (log_repaint): When switching to
	a log with new lines, scroll down to the new lines and show them in
	bold.
	(log_repaint): Handle things better (fixes screwups when switching logs).
	(log_repaint): Fix another thinko.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c: (logview_unbold_rows),
	(logview_add_new_log_lines), (logview_scroll_and_focus_path),
	(log_fill_model_no_date), (log_fill_model_date),
	(logview_create_model), (log_repaint):
	* logview.c: (logview_init): For kicks, bold the new lines for 5
	seconds when a log is updated.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c: (logview_update_version_bar),
	(logview_add_new_log_lines), (log_repaint):
	* logrtns.c: (log_open), (log_add_lines), (log_read_new_lines):
	* logrtns.h:
	* logview.c: (logview_select_log): Monitoring was broken, fix it.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* logview.c (logview_init): Cleanup the main treeview creation.

2005-11-16  Vincent Noel <vincent.noel@gmail.com>
